--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "sass": "^1.37.5",
     "express": "^4.18.1"
   },
+  "engines": {
+    "node": ">=14.16.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ryabikova/middle.messenger.praktikum.yandex.git"
