--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@parcel/transformer-sass": "^2.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "parcel": "^2.7.0",
-    "@parcel/transformer-sass": "^2.7.0",
     "sass": "^1.37.5",
-    "express": "^4.18.1"
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14.16.0"
