--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
 {
     "extends": "airbnb-base", 
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
+    "plugins": [
+      "@typescript-eslint",
+      "import"
+    ],
     "rules": {
       "no-unused-vars": 2,
       "max-len": [1, 100],
       "max-params": [2, 3]
       }
   } 
+  
