--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
   "scripts": {
     "dev": "parcel 'src/index.html' --open",
     "build": "parcel build src/index.html --no-source-maps --no-cache",
-    "start": "node ./server.js"
+    "start": "node ./server.ts"
+  },
+  "dependencies": {
+    "handlebars": "4.7.7",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-    "@parcel/transformer-sass": "^2.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint": "^8.26.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.1",
-    "handlebars": "^4.7.7",
-    "parcel": "^2.7.0",
-    "sass": "^1.37.5",
-    "typescript": "^4.8.4"
+    "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
+    "@parcel/transformer-sass": "2.7.0",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint": "8.26.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "express": "4.18.1",
+    "parcel": "2.7.0",
+    "sass": "1.37.5",
+    "stylelint": "14.14.1",
+    "stylelint-config-standard": "29.0.0",
+    "stylelint-config-standard-scss": "6.1.0",
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=14.16.0"
