--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,18 @@
     "rules": {
       "no-unused-vars": 2,
       "max-len": [1, 100],
-      "max-params": [2, 3]
-      }
+      "max-params": [2, 3],
+      "no-param-reassign": 0,
+      "import/no-unresolved": "off",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+      ]
+    }
   } 
-  
