--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
-    "@parcel/transformer-sass": "^2.8.2",
+    "@parcel/transformer-sass": "2.8.2",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "eslint": "8.26.0",
@@ -22,7 +22,7 @@
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-plugin-import": "2.26.0",
     "express": "4.18.1",
-    "parcel": "^2.8.2",
+    "parcel": "2.8.2",
     "sass": "1.37.5",
     "stylelint": "14.14.1",
     "stylelint-config-standard": "29.0.0",
